fix float box align

--- a/index.css
+++ b/index.css
@@ -190,6 +190,7 @@ em {
   max-width: 1000px;
   display: inline-block;
   text-align: left;
+  vertical-align: top;
 }
 .boxs .box-wrap {
   display: inline-block;
